[gd_scene load_steps=7 format=2]

[ext_resource path="res://Avatar.gd" type="Script" id=1]
[ext_resource path="res://assets/player/red.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/btn_a.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/left_arrow.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/right_arrow.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "ArrowsAnim"
length = 2.0
loop = true
step = 0.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("Canvas/LeftArrow:rect_position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 9.90722, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Canvas/RightArrow:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 10, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}

[node name="Avatar" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Canvas" type="CanvasModulate" parent="."]

[node name="TextureRect" type="TextureRect" parent="Canvas"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -147.46
margin_top = -176.198
margin_right = 69.54
margin_bottom = 121.802
texture = ExtResource( 2 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReadyBtn" type="TextureRect" parent="Canvas"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = 27.8739
margin_right = 32.0
margin_bottom = 91.8739
texture = ExtResource( 3 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftArrow" type="TextureRect" parent="Canvas"]
margin_left = -97.2652
margin_top = 0.0978203
margin_right = -65.2652
margin_bottom = 32.0974
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightArrow" type="TextureRect" parent="Canvas"]
margin_left = 51.138
margin_top = 0.0987364
margin_right = 83.138
margin_bottom = 32.0984
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "ArrowsAnim"
anims/ArrowsAnim = SubResource( 1 )
